# hextree-api

./: .gitignore  Cargo.toml  Justfile  README.md  settings.template.toml
.github/workflows/: rust.yml
src/: error.rs  lib.rs  lookup.rs  main.rs  server.rs  settings.rs
src/cli/: serve.rs
src/handlers/: bounds.rs  health.rs  mod.rs
