[package]
name = "hextree-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0"
byteorder = "1"
clap = {version = "4", features = ["derive"]}
config = {version="0", default-features=false, features=["toml"]}
flate2 = "1"
geo = "0"
h3o = { version = "0", features = [ "geo", "serde" ] }
helium-proto = {git = "https://github.com/helium/proto", branch = "master", features = ["services"]}
hextree = { git = "https://github.com/JayKickliter/HexTree.git", rev = "e6923d6f147e046fead31d9fdd68130c2ec9d8b4" }
indicatif = "0.17.7"
serde =  {version = "1", features=["derive"]}
serde_json = { version = "1", features = [ "std"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = "0"
tracing-log = "0"
tracing-subscriber = { version = "0", default-features=false, features = ["env-filter", "registry", "fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[profile.release]
debug = true
